# cybersecurity-miw

./: .gitignore  AUTHORS  GNUmakefile  GNUmakefile.in  LICENSE  Makefile.am  README.md  anonExtractBluecoat.txt  config.h  config.h.in  config.status  configure  configure.ac  murmurhash2.cpp
app/: Makefile.am  TODO.logs  TODO.logs~  bluecoat_log_proc.cc  bluecoat_log_proc.cc~  curl_mget.cc  curl_mget.cc~  curl_mget.h  curl_mget.h~  log_compacter.cc  miw.cc  simple_log_compacter.cc  solr_commit.cc  solr_commit.cc~  wc.cc
data/tests/: match_file.txt
doc/: log_search_engine_doc.aux  log_search_engine_doc.tex
lib/: application.hh  bench.hh  defsplitter.hh  map_bucket_manager.hh
metis/: Makefile.am  appbase.hh  application.cc  application.hh  bench.hh  btree.cc  btree.cc.mine  btree.hh  cpumap.cc  defsplitter.hh  ibs.cc  mr-types.hh  reduce_bucket_manager.hh
miw/: Makefile.am  job.cc  job.h  log_definition.proto  log_format.cc  log_format.h  log_record.cc  log_record.h  mr_job.cc  mr_job.h  str_utils.h
miw/formats/: Makefile.am  McAfee.fmt  McAfee.json  MicrosoftDNSlogs.fmt  MicrosoftDNSlogs.json  anon_bluecoat_format.fmt  anon_bluecoat_format.json  domain_controller_format.fmt  domain_controller_format.json  evtx.fmt  evtx.json  evtx2.fmt  evtx2.json  firewall_checkpoint.json  format_json2pb.py  paloalto.fmt  paloalto.json  proxy_format.fmt  proxy_format.json  squid3_search_test.fmt  squid3_search_test.json  test.pb  test_json2pb.py
miw/formats/tests/: filter.fmt  filter.json  match.fmt  match.json  match_exact.fmt  match_exact_neg.json  match_file.json  ratio.fmt  ratio.json  sum.fmt  sum.json  variance-mean-sum.fmt  variance-mean-sum.json  variance.fmt  variance.json
python/: miw_job.py  miwlogger.py
solr/conf/: schema.xml
tests/: Makefile.am  ut-mr-parsing.cc
